samples/_failures_safe/1761097852_a3155d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_623f45f9.c: In function ‘main’:
./samples/SAFE/__tmp_623f45f9.c:156:9: error: expected ‘;’ at end of input
  156 |     mat2
      |         ^
      |         ;
./samples/SAFE/__tmp_623f45f9.c:156:5: error: expected declaration or statement at end of input
  156 |     mat2
      |     ^~~~
